; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mlang/extr_mlang.c_ConvertJapaneseUnicodeToJIS.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mlang/extr_mlang.c_ConvertJapaneseUnicodeToJIS.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i64, i32*, i64)* @ConvertJapaneseUnicodeToJIS to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ConvertJapaneseUnicodeToJIS(i32 %0, i64 %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @WideCharToMultiByte(i32 932, i32 0, i32 %12, i64 %13, i32* null, i32 0, i32* null, i32* null)
  store i32 %14, i32* %10, align 4
  %15 = call i32 (...) @GetProcessHeap()
  %16 = load i32, i32* %10, align 4
  %17 = call i32* @HeapAlloc(i32 %15, i32 0, i32 %16)
  store i32* %17, i32** %9, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i64, i64* %6, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @WideCharToMultiByte(i32 932, i32 0, i32 %18, i64 %19, i32* %20, i32 %21, i32* null, i32* null)
  %23 = load i32*, i32** %9, align 8
  %24 = load i32, i32* %10, align 4
  %25 = call i32 @debugstr_an(i32* %23, i32 %24)
  %26 = call i32 @TRACE(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %25)
  %27 = load i32*, i32** %9, align 8
  %28 = load i32, i32* %10, align 4
  %29 = call i64 @ConvertSJIS2JIS(i32* %27, i32 %28, i32* null)
  store i64 %29, i64* %11, align 8
  %30 = load i64, i64* %8, align 8
  %31 = load i64, i64* %11, align 8
  %32 = icmp sge i64 %30, %31
  br i1 %32, label %33, label %38

33:                                               ; preds = %4
  %34 = load i32*, i32** %9, align 8
  %35 = load i32, i32* %10, align 4
  %36 = load i32*, i32** %7, align 8
  %37 = call i64 @ConvertSJIS2JIS(i32* %34, i32 %35, i32* %36)
  br label %38

38:                                               ; preds = %33, %4
  %39 = call i32 (...) @GetProcessHeap()
  %40 = load i32*, i32** %9, align 8
  %41 = call i32 @HeapFree(i32 %39, i32 0, i32* %40)
  %42 = load i64, i64* %11, align 8
  ret i64 %42
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32, i64, i32*, i32, i32*, i32*) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debugstr_an(i32*, i32) #1

declare dso_local i64 @ConvertSJIS2JIS(i32*, i32, i32*) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
